--- a/src/styles/common.styl
+++ b/src/styles/common.styl
@@ -180,7 +180,7 @@ section
       font 12px/26px var(--body)
       position absolute
       top 50px
-      right 50px
+      right 20px
       @media $mobile
         display none
 
